deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
  namespace: testapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: testapp
