deploy/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: testapp
  namespace: testapp
spec:
  ingressClassName: nginx
  rules:
    - host: drone.0zh.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapp
                port:
                  number: 8080
